<resources>
    <string name="app_name">Instagram-Clone</string>
    <string name="meta">Meta</string>
    <string name="from">from</string>
    <string name="name">name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an Account login?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>